Tue Nov 18 13:59:11 2003  Simon McQueen  <sm@prismtechnologies.com>

        * tao/ORB.cpp (resolve_service):

          Remove the check for an environment property defining the IOR of one
          of the four 'known' services.

          (resolve_initial_references):

          Check instead for an environment property in the form <name>IOR after
          checking the IOR table (where name is any name). This fixes bug
          #1334.

          (create_operation_list):
          Added this method. Delegates to TAO_IFR_Client_Adapter (see below).

        * tao/CORBA_methods.h:
        * tao/ORB.h (create_operation_list):
        * tao/IFR_Client_Adapter.h (create_operation_list):
        * tao/IFR_Client/IFR_ClientAdapterImpl.h (create_operation_list):
        * tao/IFR_Client/IFR_ClientAdapterImpl.cpp (create_operation_list):

          Implemented create_operation_list. This fixes bug #1630.

        * orbsvcs/IFR_Service/ifr_removing_visitor.cpp:
        * orbsvcs/IFR_Service/ifr_removing_visitor.h:

          Added visit_root method. This fixes bug #1331.

        * tao/DynamicAny/DynUnion_i.cpp (to_any):

          Check if union is empty, i.e. check if it has an active member,
          before adding member_ to the CDR Stream. This fixes bug #1636.

          (set_from_any):

          Strip alias from type code. This fixes bug #1639.

        * utils/nslist/nsadd.cpp:
        * utils/nslist/nslist.cpp:
        * utils/nslist/README:

          Add the ability to list the IORs of subcontexts within a naming
          graph. This fixes bug #1624.

        * tao/Valuetype/ValueBase.cpp (_tao_unmarshal_pre):

          If no type information is given in the CDR encoding, as indicated
          by the <value-tag>, then use the repository id parameter instead.
          This fixes bug #1629.

        * TAO_IDL/be/be_visitor_typedef/typedef_ci.cpp (visit_array):

          Fix check for definition in another file. This fixes bug #1628.
